Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 2.33***

***     Added vpm --minimum switch.

* Verilog::Language 2.331 2005/10/05

***     Added vhier example program. [Vasu Arasanipalai]

* Verilog::Language 2.330 2005/09/06

***	vpm now aliases $error to $uerror, etc, to avoid conflict
	with SystemVerilog $error function.  [Tad Truex]

***	$uassert_info now uses __message_on. [Vasu Arasanipalai]

****	Fix preprocessor substitution of quoted parameterized defines.

* Verilog::Language 2.321 2005/08/03

***	Verilog::SigParser now sees cells inside generates.  [by Thomas Ziller]

* Verilog::Language 2.320 2005/07/27

***     Add vrename --cryptall option.

***     Fix Language is_keywords to match V2K language spec. [Mark Grossman]
	Deleted extern, makefile, supply.  Added ifnone, strength, unsigned.

****	Fix core dump when missing newline in `define.  [David van der bokke]

* Verilog::Language 2.316 2005/06/10

****	Fix define substitution with incomplete defines.  [by Ronald Dean Smith]

****	Fix C++ Comments causing Perl compile problems. [Merijn Brand]

* Verilog::Language 2.315 2005/03/16

****	Support for latest SystemC::Netlist version.

* Verilog::Language 2.314 2005/03/14

****	Support for latest SystemC::Netlist version.

* Verilog::Language 2.313 2005/03/01

***	Vrename no longer recurses into CVS or .svn directories.

***	Add specparam keyword. [Mark Grossman]

****	Add NC-Verilog, and Verilog::Parser tests.

* Verilog::Language 2.312 2005/02/04

***	Fix ignoring lines with same line number as end of last include.

* Verilog::Language 2.311 2005/01/27

***	Support parsing of signed numbers.  [Rudi Rughoonundon]

**** 	Fix resolve_filename misfinding directories. [John Tseng]

****    Fix Verilog::Getopt::get_parameters for NC-Verilog.

* Verilog::Language 2.310 2005/01/24
